force-app/main/default/objects/CampaignContact__c/CampaignContact__c.object-meta.xml
<CustomObject>
    <description>A junction object that will allow a connection to the BB Campaigns and Contact that will receive information about the campaign.</description>
    <label>Campaign Contact</label>
    <nameField>
        <label>CampaignContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>