force-app/main/default/objects/CampaignContact__c/fields/Cetificate__c.field-meta.xml
<CustomField>
    <fullName>Cetificate__c</fullName>
    <label>Cetificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>