force-app/main/default/objects/CampaignContact__c/fields/Last_sent__c.field-meta.xml
<CustomField>
    <fullName>Last_sent__c</fullName>
    <description>The last time the details were sent. To send again, press the &quot;Send details&quot; button on the BB Campaign</description>
    <label>Last sent</label>
    <type>DateTime</type>
</CustomField>